--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "msw": "^2.2.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zod": "^3.22.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -24,8 +22,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "msw": "^2.2.13",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "zod": "^3.22.4"
   },
   "msw": {
     "workerDirectory": [
