--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
     "paths": {
+      "src/*": ["./src/*"],
       "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     },
     /* Bundler mode */
